<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#DFEAF1">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="25sp"
        android:textColor="#ff000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp"
        android:background="#F08C35"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app"
        android:layout_below="@+id/spotify_streamer"
        android:layout_alignLeft="@+id/spotify_streamer"
        android:layout_alignStart="@+id/spotify_streamer"
        android:background="#F08C35"
        android:layout_alignRight="@+id/spotify_streamer"
        android:layout_alignEnd="@+id/spotify_streamer"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app"
        android:layout_below="@+id/scores_app"
        android:layout_alignLeft="@+id/scores_app"
        android:layout_alignStart="@+id/scores_app"
        android:background="#F08C35"
        android:layout_alignRight="@+id/scores_app"
        android:layout_alignEnd="@+id/scores_app"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/library_app"
        android:layout_alignLeft="@+id/library_app"
        android:layout_alignStart="@+id/library_app"
        android:background="#F08C35"
        android:layout_alignRight="@+id/library_app"
        android:layout_alignEnd="@+id/library_app"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/build_it_bigger"
        android:background="#F08C35"
        android:layout_alignRight="@+id/build_it_bigger"
        android:layout_alignEnd="@+id/build_it_bigger"
        android:layout_alignLeft="@+id/build_it_bigger"
        android:layout_alignStart="@+id/build_it_bigger"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz_reader"
        android:background="#CD0E3E"
        android:layout_alignRight="@+id/xyz_reader"
        android:layout_alignEnd="@+id/xyz_reader"
        android:layout_alignLeft="@+id/xyz_reader"
        android:layout_alignStart="@+id/xyz_reader"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
